--- a/public/index.html
+++ b/public/index.html
@@ -5,30 +5,31 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Silk Space</title>
 <link rel="stylesheet" href="style.css">
-<script src="https://cdn.jsdelivr.net/npm/@appwrite/sdk@9.0.0/dist/appwrite.min.js"></script>
 </head>
 <body>
 <div id="app">
 
-  <!-- لوگو -->
+  <!-- هدر -->
   <header>
-    <img src="logo.png" alt="Silk Space" id="logo">
+    <img src="images/logo.png" alt="Silk Space" id="logo">
     <button id="logoutBtn" style="display:none;">خروج</button>
   </header>
 
   <!-- فرم ورود / ثبت نام -->
   <section id="auth">
     <h2>ورود یا ثبت‌نام</h2>
-    <input type="email" id="email" placeholder="ایمیل">
-    <input type="password" id="password" placeholder="رمز عبور">
+    <input type="text" id="loginInput" placeholder="ایمیل یا نام کاربری" class="neon-input">
+    <input type="password" id="password" placeholder="رمز عبور" class="neon-input">
     <button id="signupBtn" class="neon-btn">ثبت‌نام</button>
     <button id="loginBtn" class="neon-btn">ورود</button>
   </section>
 
   <!-- صفحه اصلی محصولات -->
   <section id="home" style="display:none;">
-    <input type="text" id="search" placeholder="جستجوی محصولات..." class="neon-input">
-    <button id="addProductBtn" class="neon-btn">افزودن محصول</button>
+    <div class="search-add">
+      <input type="text" id="search" placeholder="جستجوی محصولات..." class="neon-input">
+      <button id="addProductBtn" class="neon-btn">افزودن محصول</button>
+    </div>
     <div id="products" class="product-grid"></div>
   </section>
 
@@ -37,15 +38,27 @@
     <div class="modal-content">
       <h3>افزودن محصول جدید</h3>
       <input type="text" id="productTitle" placeholder="عنوان محصول" class="neon-input">
-      <input type="text" id="productDesc" placeholder="توضیح محصول (اختیاری)" class="neon-input">
-      <input type="text" id="productImage" placeholder="لینک عکس (اختیاری)" class="neon-input">
+      <textarea id="productDesc" placeholder="توضیح محصول (اختیاری)" class="neon-input"></textarea>
+      <input type="file" id="productImage" accept="image/*" class="neon-input">
       <button id="saveProductBtn" class="neon-btn">ذخیره محصول</button>
       <button id="cancelProductBtn" class="neon-btn cancel-btn">لغو</button>
     </div>
   </section>
 
+  <!-- پنجره چت -->
+  <section id="chatModal" style="display:none;" class="modal">
+    <div class="modal-content chat-content">
+      <h3 id="chatWith">چت با کاربر</h3>
+      <div id="chatMessages" class="chat-messages"></div>
+      <input type="text" id="chatInput" placeholder="پیام..." class="neon-input">
+      <button id="sendMsgBtn" class="neon-btn">ارسال</button>
+      <button id="closeChatBtn" class="neon-btn cancel-btn">بستن</button>
+    </div>
+  </section>
+
 </div>
 
+<script src="chat.js"></script>
 <script src="app.js"></script>
 </body>
 </html>
