--- a/public/index.html
+++ b/public/index.html
@@ -11,28 +11,24 @@
 
   <!-- هدر -->
   <header>
-    <img src="images/logo.png" alt="Silk Space" id="logo">
-    <div>
-      <button id="chatsBtn" style="display:none;">چت‌ها</button>
-      <button id="logoutBtn" style="display:none;">خروج</button>
-    </div>
+    <img src="logo.png" id="logo" alt="Silk Space">
+    <button id="logoutBtn" style="display:none;">خروج</button>
+    <button id="chatsBtn" style="display:none;">چت‌ها</button>
   </header>
 
   <!-- فرم ورود / ثبت نام -->
   <section id="auth">
     <h2>ورود یا ثبت‌نام</h2>
-    <input type="text" id="username" placeholder="نام کاربری یا ایمیل" class="neon-input">
-    <input type="password" id="password" placeholder="رمز عبور" class="neon-input">
+    <input type="text" id="username" placeholder="نام یا ایمیل">
+    <input type="password" id="password" placeholder="رمز عبور">
     <button id="signupBtn" class="neon-btn">ثبت‌نام</button>
     <button id="loginBtn" class="neon-btn">ورود</button>
   </section>
 
   <!-- صفحه اصلی -->
   <section id="home" style="display:none;">
-    <div class="home-header">
-      <input type="text" id="search" placeholder="جستجوی محصولات..." class="neon-input">
-      <button id="addProductBtn" class="neon-btn">افزودن محصول</button>
-    </div>
+    <input type="text" id="search" placeholder="جستجوی محصولات..." class="neon-input">
+    <button id="addProductBtn" class="neon-btn">افزودن محصول</button>
     <div id="products" class="product-grid"></div>
   </section>
 
@@ -48,40 +44,28 @@
     </div>
   </section>
 
-  <!-- پنجره پروفایل -->
-  <section id="profileModal" style="display:none;" class="modal">
-    <div class="modal-content">
-      <h3>پروفایل شما</h3>
-      <input type="text" id="profileName" placeholder="نام" class="neon-input">
-      <input type="file" id="profileImageFile" class="neon-input">
-      <textarea id="profileDesc" placeholder="توضیحات" class="neon-input"></textarea>
-      <button id="saveProfileBtn" class="neon-btn">ذخیره</button>
-      <button id="closeProfileBtn" class="neon-btn cancel-btn">بستن</button>
-    </div>
-  </section>
-
-  <!-- پنجره لیست چت‌ها -->
-  <section id="chatsModal" style="display:none;" class="modal">
-    <div class="modal-content chat-content">
-      <h3>چت‌های من</h3>
-      <div id="chatsList" class="chat-messages"></div>
-      <button id="closeChatsBtn" class="neon-btn cancel-btn">بستن</button>
-    </div>
-  </section>
-
-  <!-- پنجره چت با هر کاربر -->
+  <!-- مدال چت -->
   <section id="chatModal" style="display:none;" class="modal">
-    <div class="modal-content chat-content">
-      <h3 id="chatWith"></h3>
-      <div id="chatMessages" class="chat-messages"></div>
-      <input type="text" id="chatInput" placeholder="پیام شما" class="neon-input">
+    <div class="modal-content">
+      <h3>چت با <span id="chatWith"></span></h3>
+      <div id="chatMessages" style="height:200px;overflow:auto;background:#111;padding:5px;margin-bottom:5px;"></div>
+      <input type="text" id="chatInput" placeholder="پیام..." class="neon-input">
       <button id="sendChatBtn" class="neon-btn">ارسال</button>
       <button id="closeChatBtn" class="neon-btn cancel-btn">بستن</button>
     </div>
   </section>
 
+  <!-- مدال لیست چت‌ها -->
+  <section id="chatsModal" style="display:none;" class="modal">
+    <div class="modal-content">
+      <h3>چت‌ها</h3>
+      <div id="chatsList"></div>
+      <button id="closeChatsBtn" class="neon-btn cancel-btn">بستن</button>
+    </div>
+  </section>
+
 </div>
 
-<script src="app.js"></script>
+<script src="chat.js"></script>
 </body>
 </html>
