--- a/public/index.html
+++ b/public/index.html
@@ -12,13 +12,12 @@
   <header>
     <img src="logo.png" alt="Silk Space" id="logo">
     <button id="logoutBtn" style="display:none;">خروج</button>
-    <button id="myChatsBtn" style="display:none;">چت‌ها</button>
   </header>
 
   <!-- ورود/ثبت نام -->
   <section id="auth">
     <h2>ورود یا ثبت‌نام</h2>
-    <input type="text" id="username" placeholder="نام کاربری یا ایمیل">
+    <input type="text" id="username" placeholder="نام کاربری">
     <input type="password" id="password" placeholder="رمز عبور">
     <button id="signupBtn">ثبت‌نام</button>
     <button id="loginBtn">ورود</button>
