--- a/public/index.html
+++ b/public/index.html
@@ -12,32 +12,51 @@
   <header>
     <img src="logo.png" alt="Silk Space" id="logo">
     <button id="logoutBtn" style="display:none;">خروج</button>
+    <button id="profileBtn" style="display:none;">پروفایل من</button>
+    <button id="chatsBtn" style="display:none;">چت‌ها</button>
   </header>
 
   <!-- ورود/ثبت نام -->
   <section id="auth">
     <h2>ورود یا ثبت‌نام</h2>
-    <input type="text" id="username" placeholder="نام کاربری">
-    <input type="password" id="password" placeholder="رمز عبور">
-    <button id="signupBtn">ثبت‌نام</button>
-    <button id="loginBtn">ورود</button>
+    <input type="text" id="username" placeholder="نام کاربری" class="neon-input">
+    <input type="password" id="password" placeholder="رمز عبور" class="neon-input">
+    <button id="signupBtn" class="neon-btn">ثبت‌نام</button>
+    <button id="loginBtn" class="neon-btn">ورود</button>
   </section>
 
   <!-- صفحه اصلی محصولات -->
   <section id="home" style="display:none;">
-    <input type="text" id="search" placeholder="جستجوی محصولات...">
-    <button id="addProductBtn">افزودن محصول</button>
-    <div id="products"></div>
+    <input type="text" id="search" placeholder="جستجوی محصولات..." class="neon-input">
+    <button id="addProductBtn" class="neon-btn">افزودن محصول</button>
+    <div id="products" class="product-grid"></div>
   </section>
 
   <!-- فرم افزودن محصول -->
   <section id="addProductForm" style="display:none;">
     <h3>افزودن محصول جدید</h3>
-    <input type="text" id="productTitle" placeholder="عنوان">
-    <input type="text" id="productDesc" placeholder="توضیح">
-    <input type="file" id="productImage">
-    <button id="saveProductBtn">ذخیره</button>
-    <button id="cancelProductBtn">لغو</button>
+    <input type="text" id="productTitle" placeholder="عنوان" class="neon-input">
+    <input type="text" id="productDesc" placeholder="توضیح" class="neon-input">
+    <input type="file" id="productImage" accept="image/*">
+    <button id="saveProductBtn" class="neon-btn">ذخیره</button>
+    <button id="cancelProductBtn" class="neon-btn">لغو</button>
+  </section>
+
+  <!-- فرم پروفایل -->
+  <section id="profileForm" style="display:none;">
+    <h3>ویرایش پروفایل</h3>
+    <input type="text" id="profileName" placeholder="نام کاربری جدید" class="neon-input">
+    <textarea id="profileDesc" placeholder="توضیحات شما" class="neon-input"></textarea>
+    <input type="file" id="profileAvatar" accept="image/*">
+    <button id="saveProfileBtn" class="neon-btn">ذخیره تغییرات</button>
+  </section>
+
+  <!-- لیست چت‌ها -->
+  <section id="chatSection" style="display:none;">
+    <h3>چت‌ها</h3>
+    <div id="chatList"></div>
+    <input type="text" id="chatMessage" placeholder="پیام خود را بنویسید..." class="neon-input">
+    <button id="sendChatBtn" class="neon-btn">ارسال</button>
   </section>
 
 </div>
